# openvino_release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  gbp.conf  rules
